namespaces/live-1.cloud-platform.service.justice.gov.uk/hmpps-manage-users-api-dev/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-manage-users-api-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "dps_tech_team"
    cloud-platform.justice.gov.uk/slack-alert-channel: "dps_alerts_non_prod"
    cloud-platform.justice.gov.uk/application: "HMPPS Manage Users API"
    cloud-platform.justice.gov.uk/owner: "DPS Tech Team"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-manage-users-api.git"
    cloud-platform.justice.gov.uk/team-name: "hmpps-tech"
